# Daimon

./: .gitignore  AUTHORS  CHECKPOINT.md  CONTRIBUTING.md  JOURNAL.md  Makefile  PUBLISH.md  QUICKSTART.md  README.md  SECURITY.md  SPEC.md  go.mod  go.sum  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmd/daimon/: client.go  cmd_activity.go  cmd_activity_test.go  cmd_backup.go  cmd_backup_test.go  cmd_capability.go  cmd_chat.go  cmd_chat_automem.go  cmd_chat_automem_test.go  cmd_completion.go  cmd_completion_test.go  cmd_doctor.go  cmd_doctor_test.go  cmd_identity.go  cmd_init.go  cmd_init_test.go  cmd_memory.go  cmd_memory_test.go  cmd_payment.go  cmd_peer.go  cmd_provider.go  cmd_reputation.go  cmd_rotate_password.go  cmd_unlock.go  cmd_wallet.go  flags.go  main.go  output.go  password.go  rpc.go  spawn.go
cmd/daimond/: main.go
cmd/x402-mock-server/: main.go
demo/: README.md  script.md
design/: v0.2-wallet.md  v0.3-federation.md  v0.4-delegation.md
docs/: perf.md  systemd.md
docs/systemd/: daimon-unlock.service  daimond.service
examples/streaming/: README.md  python_stream.py  typescript_stream.mjs
examples/x402-smoke/: README.md  python_smoke.py  run.sh  typescript_smoke.mjs
internal/activity/: activity.go  crypto.go  log.go  log_test.go
internal/addressbook/: book.go  book_test.go  types.go
internal/capability/: capability.go  capability_test.go  db.go  db_test.go
internal/daimonhome/: daimonhome.go  daimonhome_test.go
internal/did/web/: document.go  endpoint.go  endpoint_test.go  parse.go  resolve.go  web_test.go
internal/identity/: bench_test.go  did.go  identity.go  identity_test.go  keystore.go
internal/memory/: crypto.go  crypto_test.go  embedder.go  export.go  memory.go  memory_test.go  search.go  store.go
internal/memory/ollama/: ollama.go  ollama_test.go
internal/payment/: bench_test.go  client.go  eip712.go  payment_test.go  tokens.go  types.go
internal/provider/: credentials.go  provider.go  provider_test.go  registry.go  streamer.go
internal/provider/claude/: claude.go  claude_test.go
internal/provider/lmstudio/: lmstudio.go  lmstudio_test.go
internal/provider/ollama/: ollama.go  ollama_test.go
internal/provider/openai/: openai.go  openai_test.go
internal/reputation/: receipt.go
internal/secretbox/: bench_test.go  secretbox.go  secretbox_test.go
internal/server/: address_book_handlers.go  address_book_handlers_test.go  capability_handlers.go  capability_handlers_test.go  federation_handlers.go  federation_handlers_test.go  federation_smoke_test.go  handlers.go  jsonrpc.go  payment_handlers.go  payment_handlers_test.go  peer_ask_capability_test.go  peer_channel_handlers.go  peer_channel_handlers_test.go  provider_handlers_test.go  reputation_handlers.go  reputation_handlers_test.go  server.go  server_test.go  stream_test.go  unlock_test.go  v04_cross_daimon_smoke_test.go  wallet_handlers.go  wallet_handlers_test.go
internal/transport/: keyconv.go  keyconv_test.go  noise.go  noise_test.go  tcp.go  tcp_test.go
internal/wallet/: bench_test.go  keystore.go  wallet.go  wallet_test.go
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/daimon/: __init__.py  _home.py  _rpc.py  _stream.py  _version.py  client.py  errors.py
sdk/python/scripts/: gen_version.py
sdk/python/tests/: conftest.py  test_capability_reputation.py  test_client.py  test_home.py  test_peer.py  test_rpc.py  test_stream.py  test_wallet_payment.py
sdk/typescript/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
sdk/typescript/scripts/: gen-version.mjs
sdk/typescript/src/: client.ts  errors.ts  home.ts  index.ts  rpc.ts  stream.ts  version.ts
sdk/typescript/test/: capability_reputation.test.ts  client.test.ts  home.test.ts  peer.test.ts  rpc.test.ts  stream.test.ts  stub-daemon.ts  wallet_payment.test.ts
