[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. The import name remains `daimon` (see
# tool.setuptools.packages.find): `from daimon import Client` continues
# to work unchanged. The PyPI namespace is shared with two unrelated
# active projects (daimon-sdk for processd-mcp, daimon-client for an
# "AI sidecar"), so we publish as `daimon-protocol` to disambiguate.
# `daimon` itself on PyPI is held by Alexander Fedotov's dormant
# 0.0.2 hobby package; revisit if/when reclaimed.
name = "daimon-protocol"
version = "0.2.0.dev1"
description = "Python SDK for the Daimon protocol — sovereign personal AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Johannes Christian Koeleman" }]
keywords = ["daimon", "ai", "sovereign", "protocol", "agent", "did", "jsonrpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/regitxx/Daimon"
Repository = "https://github.com/regitxx/Daimon"
Issues = "https://github.com/regitxx/Daimon/issues"
Documentation = "https://github.com/regitxx/Daimon/blob/main/sdk/python/README.md"
Changelog = "https://github.com/regitxx/Daimon/blob/main/sdk/python/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["daimon*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
